--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    package="com.example.mycalculator">
+
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyCalculator" >
-        <activity
-            android:name=".MainActivity"
-<<<<<<< HEAD
-            android:exported="true" />
-        <activity
-            android:name=".CalculatorActivity"
-            android:exported="true" >
-=======
-            android:exported="true">
->>>>>>> 3574c88f5146e42cdddd49cd2c020b39378de82f
+        android:theme="@style/Theme.MyCalculator">
+
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CalculatorActivity" android:exported="false" />
+        <activity android:name=".MediaPlayerActivity" android:exported="false" />
+
     </application>
 
 </manifest>
